# miniquad

./: .gitignore  Cargo.toml  README.md  build.rs  ime_output.txt  rustfmt.toml  shell.nix
.cargo/: config.toml
.github/workflows/: rust.yml
docs/: README.md  cross-platform-logs.md  javascript-interop.md  plugins.md  wasm.md
examples/: blobs.rs  drag_drop_test.rs  fps.rs  ime_test.rs  index.html  instancing.rs  mandelbrot.rs  monitor_metrics.rs  mouse_cursor.rs  msaa_render_texture.rs  offscreen.rs  post_processing.rs  quad.rs  screen_metrics.rs  skia.rs  triangle.rs  triangle_color4b.rs  window.rs  window_conf.rs  window_free.rs  window_manipulation.rs  window_owned.rs  window_position_test.rs
examples/shaders/: blobs-fragment.glsl  fragment-color.glsl  instancing-vertex.glsl  offscreen-fragment.glsl  offscreen-vertex.glsl  post_processing-fragment.glsl  post_processing-offscreenvertex.glsl  post_processing-vertex.glsl  quad-fragment.glsl  vertex-uv.glsl
examples/shaders/quad/: quad.frag  quad.frag.metal  quad.frag.spv  quad.metallib  quad.vert  quad.vert.metal  quad.vert.spv  quad_100.frag  quad_100.vert  shader.sh
java/: MainActivity.java  QuadNative.java
js/: gl.js  quad.wasm
miniquad-derive/: Cargo.toml
miniquad-derive/src/: layout.rs  lib.rs
miniquad-derive/tests/: layout_test.rs
miniquad-main/: Cargo.toml
miniquad-main/src/: lib.rs
native/sapp-android/: Cargo.toml  build.rs
native/sapp-android/src/: egl.rs  gl3.rs  lib.rs  sokol_app.c  sokol_app_android.rs
native/sapp-darwin/: Cargo.toml  README.md  build.rs
native/sapp-darwin/src/: gl.rs  lib.rs  sokol_app_darwin.rs
native/sapp-dummy/: Cargo.toml
native/sapp-dummy/src/: gl.rs  lib.rs  rand.rs
native/sapp-ios/: Cargo.toml  build.rs
native/sapp-ios/src/: gl.rs  lib.rs  query_stab.rs  sokol_app_ios.rs
native/sapp-kms/: Cargo.toml  LICENSE-MIT  README.md  build.rs
native/sapp-kms/src/: gl.rs  gl3.rs  kms.rs  lib.rs  query_stab.rs
native/sapp-kms/src/kms/: gbm.rs
native/sapp-linux/: .gitignore  Cargo.toml  build.rs
native/sapp-linux/src/: clipboard.rs  gl.rs  lib.rs  rand.rs  wayland.rs  x.rs  x_cursor.rs  xi_input.rs
native/sapp-linux/src/wayland/: decorations.rs  egl.rs  extensions.rs  gl.rs  shm.rs  wayland_client.rs  wayland_egl.rs  xdg_shell_protocol.rs  xkb.rs
native/sapp-linux/src/wayland/extensions/: viewporter.rs  xdg_decoration.rs  xdg_shell.rs
native/sapp-linux/src/x11/: gl.rs
native/sapp-metal/: .gitignore  Cargo.toml  build.rs
native/sapp-metal/src/: lib.rs  rand.rs  sokol_app.m  sokol_app_darwin.rs
native/sapp-wasm/: Cargo.toml
native/sapp-wasm/js/: gl.js  miniquad.js  sapp.js  wasm.js
native/sapp-wasm/src/: gl.rs  lib.rs  link.rs  rand.rs
native/sapp-windows/: Cargo.toml  LICENSE-MIT  build.rs
native/sapp-windows/src/: clipboard.rs  gl.rs  lib.rs  sokol_app_gnu.rs  sokol_app_msvc.rs
sokol-app-sys/: Cargo.toml  build.rs
sokol-app-sys/src/: lib.rs  sokol_app_linux.rs  sokol_app_wasm.rs  sokol_app_win.rs
src/: clipboard.rs  conf.rs  console_log.rs  default_icon.rs  dnd.rs  event.rs  fs.rs  graphics.rs  lib.rs  link.rs  log.rs  native.rs
src/graphics/: gl.rs  metal.rs  mod.rs  texture.rs
src/graphics/gl/: cache.rs  mod.rs  texture.rs
src/graphics/metal/: mod.rs  texture.rs
src/graphics/metal/shaders/: shaders.metal
src/native/: android.rs  apple.rs  egl.rs  gl.rs  ios.rs  linux_wayland.rs  linux_x11.rs  macos.rs  mod.rs  module.rs  ohos.rs  query_stab.rs  wasm.rs  windows.rs
src/native/android/: keycodes.rs  mod_inject.rs  ndk_utils.rs
src/native/apple/: apple_util.rs  frameworks.rs  gl.rs  mod.rs
src/native/linux_wayland/: clipboard.rs  decorations.rs  drag_n_drop.rs  extensions.rs  keycodes.rs  libwayland_client.rs  libwayland_egl.rs  libxkbcommon.rs  shm.rs
src/native/linux_wayland/extensions/: cursor.rs  libdecor.rs  viewporter.rs  xdg_decoration.rs  xdg_shell.rs
src/native/linux_x11/: clipboard.rs  drag_n_drop.rs  glx.rs  keycodes.rs  libx11.rs  libx11_ex.rs  rand.rs  x_cursor.rs  xi_input.rs
src/native/macos/: apple_util.rs  frameworks.rs
src/native/ohos/: keycodes.rs
src/native/wasm/: fs.rs  keycodes.rs  webgl.rs
src/native/windows/: clipboard.rs  keycodes.rs  libopengl32.rs  wgl.rs
