[package]
name = "miniquad_wasm_bindgen"
version = "0.1.0"
authors = [
	"not-fl3 <not.fl3@gmail.com>",
	"sokorototo <nyachiengatoto@gmail.com>",
]
edition = "2021"
license = "MIT/Apache-2.0"
homepage = "https://github.com/not-fl3/miniquad"
repository = "https://github.com/not-fl3/miniquad"
description = """
Hard fork of miniquad with wasm-bindgen support.
"""
readme = "README.md"
exclude = ["examples/"]
keywords = ["graphics", "3D", "opengl", "gamedev", "windowing"]
categories = ["rendering::graphics-api"]

[features]
log-impl = []

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
	"wingdi",
	"winuser",
	"libloaderapi",
	"windef",
	"shellscalingapi",
	"errhandlingapi",
	"windowsx",
	"winbase",
	"hidusage",
], default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"
ndk-sys = "0.2"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }

console_error_panic_hook = "0.1"
pollster = "0.3.0"
wasm-bindgen-futures = "0.4.42"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
default-features = false
version = "0.3"
features = [
	# log-impl
	"console",
	# Base
	"Window",
	"DomRectReadOnly",
	"Document",
	"DomRect",
	"CssStyleDeclaration",
	# Input and Events
	"ClipboardEvent",
	"MouseEvent",
	"WheelEvent",
	"KeyboardEvent",
	"ResizeObserver",
	"ResizeObserverEntry",
	"TouchEvent",
	"TouchList",
	"Touch",
	"DragEvent",
	# IO
	"XmlHttpRequest",
	"XmlHttpRequestResponseType",
	"DataTransfer",
	"File",
	"FileList",
	# Rendering
	"HtmlCanvasElement",
	"WebGl2RenderingContext",
	"WebGlContextAttributes",
	"WebGlPowerPreference",
	"WebGlFramebuffer",
	"WebGlProgram",
	"WebGlVertexArrayObject",
	"WebGlShader",
	"WebGlActiveInfo",
	"WebGlUniformLocation",
]

[dev-dependencies]
glam = { version = "0.27.0", features = ["scalar-math"] }
quad-rand = "0.2.1"
