[package]
name = "sapp-dummy"
version = "0.1.5"
authors = ["not-fl3 <not.fl3@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = """
Part of miniquad rendering library. 
Stub sapp definitions.
"""
homepage = "https://github.com/not-fl3/miniquad"
include = ["src/", "Cargo.toml", "LICENSE-MIT", "LICENSE-APACHE", "README.md"]

[dependencies]
libc = "0.2"

