[package]
name = "sapp-ios"
version = "0.1.2"
authors = ["not-fl3 <not.fl3@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
build = "build.rs"
description = """
Part of miniquad rendering library.
Native bindings to a slightly modified version of sokol-app.
"""
homepage = "https://github.com/not-fl3/miniquad"
include = ["src/", "external/", "build.rs", "Cargo.toml", "LICENSE-MIT", "LICENSE-APACHE", "README.md"]

[build-dependencies]
cc = "1.0"
