[package]
name = "sapp-linux"
version = "0.1.9"
authors = ["not-fl3 <not.fl3@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
build = "build.rs"
description = """
Part of miniquad rendering library. 
Orignally this was a sokol-app C code transpiled to rust with c2rust and partially rewritten to more idiomatic rust.
"""
homepage = "https://github.com/not-fl3/miniquad"

[dependencies]
libc = "0.2"

