[package]
name = "sapp-wasm"
version = "0.1.26"
authors = ["not-fl3 <not.fl3@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = """
Part of miniquad rendering library. 
Binding and JS implementation of GL and sokol-app API.
"""
homepage = "https://github.com/not-fl3/miniquad"
include = ["src/", "js/", "build.rs", "Cargo.toml", "LICENSE-MIT", "LICENSE-APACHE", "README.md"]

