[package]
name = "sapp-windows"
version = "0.2.9"
authors = ["not-fl3 <not.fl3@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
build = "build.rs"
description = """
Part of miniquad rendering library. 
Native bindings to slightly modified sokol-app.
"""
homepage = "https://github.com/not-fl3/miniquad"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
