[package]
name = "sapp-windows"
version = "0.2.19"
authors = ["not-fl3 <not.fl3@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = """
Part of miniquad rendering library.
Native bindings to slightly modified sokol-app.
"""
homepage = "https://github.com/not-fl3/miniquad"
include = ["src/", "Cargo.toml", "LICENSE-MIT", "LICENSE-APACHE", "README.md"]

[dependencies]
winapi = { version = "0.3", features = ["wingdi", "winuser", "libloaderapi", "windef", "shellscalingapi", "errhandlingapi", "windowsx", "winbase", "hidusage"] }
